# pprl-goodall

./: .gitignore  README.md  pyproject.toml
api/: do-api-docs.json  lu-api-docs.json  pm-api-docs.json  update_client_do.sh  update_client_lu.sh  update_client_pm.sh  update_clients.sh
api/pprl-data-owner-service-api-client/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
api/pprl-linkage-unit-service-api-client/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
api/pprl-protocol-manager-service-api-client/: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
data/: download_datasets.sh
datasets/: download_datasets.sh
experiment-definitions/baselines/: 2030-abf.json  2032-abf.json  2034-abf.json  2040-abf.json  2042-abf.json
experiment-definitions/fig3/: 2032-b100-e0.0-t-0.01.json  2032-b100-e0.0-t-0.02.json  2032-b100-e0.0-t-0.03.json  2032-b100-e0.0-t-0.04.json  2032-b100-e0.0-t-0.05.json  2032-b100-e0.0-t0.0.json  2032-b100-e0.0-t0.01.json  2032-b100-e0.0-t0.02.json  2032-b100-e0.0-t0.03.json  2032-b100-e0.0-t0.04.json  2032-b100-e0.0-t0.05.json  2032-b100-e0.1-t-0.01.json  2032-b100-e0.1-t-0.02.json  2032-b100-e0.1-t-0.03.json  2032-b100-e0.1-t-0.04.json  2032-b100-e0.1-t-0.05.json  2032-b100-e0.1-t0.0.json  2032-b100-e0.1-t0.01.json  2032-b100-e0.1-t0.02.json  2032-b100-e0.1-t0.03.json  2032-b100-e0.1-t0.04.json  2032-b100-e0.1-t0.05.json  2032-b100-e0.2-t-0.01.json  2032-b100-e0.2-t-0.02.json  2032-b100-e0.2-t-0.03.json  2032-b100-e0.2-t-0.04.json  2032-b100-e0.2-t-0.05.json  2032-b100-e0.2-t0.0.json  2032-b100-e0.2-t0.01.json  2032-b100-e0.2-t0.02.json  2032-b100-e0.2-t0.03.json  2032-b100-e0.2-t0.04.json  2032-b100-e0.2-t0.05.json  2032-b200-e0.2-t-0.01.json  2032-b200-e0.2-t-0.02.json  2032-b200-e0.2-t-0.03.json  2032-b200-e0.2-t-0.04.json  2032-b200-e0.2-t-0.05.json  2032-b200-e0.2-t0.0.json  2032-b200-e0.2-t0.01.json  (+15 more)
experiment-definitions/fig4_left/: 2030-b200-e0.2-t-0.01.json  2030-b200-e0.2-t-0.02.json  2030-b200-e0.2-t-0.03.json  2030-b200-e0.2-t-0.04.json  2030-b200-e0.2-t-0.05.json  2030-b200-e0.2-t0.0.json  2030-b200-e0.2-t0.01.json  2030-b200-e0.2-t0.02.json  2030-b200-e0.2-t0.03.json  2030-b200-e0.2-t0.04.json  2030-b200-e0.2-t0.05.json  2030-b300-e0.2-t-0.01.json  (+32 more)
goodall/: 00_generate_protocol_definitions.py  01_import_plaintext_datasets.py  02_run_multi_layer_protocols.py  03_fetch_results.py  04_quality_plots.py  05_privacy_plots.py  06_privacy_table.py  file_utils.py  test_utils.py  utils.py
(+377 files in other folders)
